[gd_scene load_steps=3 format=3 uid="uid://b5fvkv66cophc"]

[ext_resource type="Script" path="res://actor/actor_models/actor_model.gd" id="1_02jjy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oe1tg"]
size = Vector2(34, 81)

[node name="ActorModel" type="Node2D"]
script = ExtResource("1_02jjy")

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, -75, -7, -70, -7, -64, -5, -59, -1, -56, -14, -47, -15, 0, 15, 0, 14, -47, 1, -56, 5, -59, 7, -64, 7, -70)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -37.5)
shape = SubResource("RectangleShape2D_oe1tg")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
